--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
   <!-- header -->
-      <header class="header" data-header>
+      <!-- <header class="header" data-header>
         <div class="container container-header">
          <nav class="navigation-list">
           <a href="./index.html" class="main-logo link">Web<span class="main-logo-studio link">Studio</span></a>
@@ -30,16 +30,16 @@
     </ul>
     </address>
   </div>
-    </header>
+    </header> -->
   <!-- Головний контент,секція1 -->
-      <main> 
+      <!-- <main> 
         <section class="descrition">
        <div class="container .container-description">
           <h1 class="descrition-title">Effective Solutions
             <span>for Your Business</span></h1>
           <button type="button" class="description-btn" data-modal-open>Order Service</button>
        </div>
-      </section>
+      </section> -->
       
   <!--Список стратегій,секція 2 -->
         <section class="strategy-list">
@@ -85,7 +85,7 @@
       </div >
       </section>
       <!-- Чим ми займаємось -->
-      <section class="perfomance">
+      <!-- <section class="perfomance">
         <div class="container container-perfomance">
           <h2 class="perfomance-title">What Are We Doing</h2>
           <ul class="perfomance-list list">
@@ -94,9 +94,9 @@
             <li class="perfomance-item"><img src="./images/compmob.jpg" alt="computer with mobile" width="360"></li>
         </ul>
         </div >
-      </section>
+      </section> -->
       <!-- Наша команда  -->
-      <section class="team">
+      <!-- <section class="team">
         <div class="container container-team">
           <h2 class="team-title">Our Team</h2>
           <ul class="team-members list">
@@ -218,9 +218,9 @@
             </li>
           </ul>
         </div >
-      </section>
+      </section> -->
       <!-- ---------------- SECTION CUSTOMERS----------------------->
-      <section class="customers">
+      <!-- <section class="customers">
         <div class="container customers-container">
           <h2 class="customers-title">Customers</h2>
           <ul class="customers-list list">
@@ -257,9 +257,9 @@
           </ul>
         </div>
       </section>
-  </main>
+  </main> -->
   <!------------------------------- Footer----------------->
-  <footer class="footer"> 
+  <!-- <footer class="footer"> 
     <div class="container container-footer">
       <div class="footer-logo">
       <a href="./index.html" class="main-logo link" >Web<span class="main-logo-studio-footer link">Studio</span></a>
@@ -289,10 +289,10 @@
     </svg>
   </a></li>
 </ul>
-    </div>
+    </div> -->
 
     <!----------------------------FOOTER FORM --------------- -->
-      <div class="footer-form-wrap">
+      <!-- <div class="footer-form-wrap">
         <p class="form-text">Subscribe</p>
         <form class="footer-form">
           <label class="form-label" for="user_subscribe">
@@ -307,7 +307,7 @@
         </form>
       </div>
       </div >
-  </footer>
+  </footer> -->
   <!---------------------------Modal window--------------------->
 <div class="backdrop is-hidden" data-modal>
   <div class="modal">
