--- a/index.html
+++ b/index.html
@@ -81,14 +81,14 @@
   </div>
     </header>
   <!-- Головний контент,секція1 -->
-      <!-- <main> 
+      <main> 
         <section class="descrition">
        <div class="container .container-description">
           <h1 class="descrition-title">Effective Solutions
             <span>for Your Business</span></h1>
           <button type="button" class="description-btn" data-modal-open>Order Service</button>
        </div>
-      </section> -->
+      </section>
       
   <!--Список стратегій,секція 2 -->
         <section class="strategy-list">
