--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 aria-expanded="false" 
                 aria-controls="mobile-menu">
           <svg class="modal-open-btn-icon" width="32" height="32">
-            <use href="./images/icons.svg#icon-hamburger"></use>
+            <use href="./images/icons.svg#burger-icon"></use>
           </svg>
          </button>
          <address class="adress">
