--- a/index.html
+++ b/index.html
@@ -134,16 +134,26 @@
       </div >
       </section>
       <!-- Чим ми займаємось -->
-      <!-- <section class="perfomance">
+      <section class="perfomance">
         <div class="container container-perfomance">
           <h2 class="perfomance-title">What Are We Doing</h2>
           <ul class="perfomance-list list">
-            <li class="perfomance-item"><img src="./images/computer.jpg" alt="computer" width="360"></li>
-            <li class="perfomance-item"><img src="./images/apps.jpg" alt="applications" width="360"></li>
-            <li class="perfomance-item"><img src="./images/compmob.jpg" alt="computer with mobile" width="360"></li>
+            <li class="perfomance-item">
+              <img srcset="./images/desk-top-photo/comp.jpg 1x,
+              ./images/desk-top-photo/comp@2x.jpg 2x"
+              src="./images/computer.jpg" alt="computer" width="360">
+            </li>
+            <li class="perfomance-item">
+              <img srcset="./images/desk-top-photo/apps.jpg 1x,
+              ./images/desk-top-photo/apps.jpg 2x"
+              src="./images/apps.jpg" alt="applications" width="360">
+            </li>
+            <li class="perfomance-item">
+              <img src="./images/compmob.jpg" alt="computer with mobile" width="360">
+            </li>
         </ul>
         </div >
-      </section> -->
+      </section>
       <!-- Наша команда  -->
       <!-- <section class="team">
         <div class="container container-team">
