--- a/index.html
+++ b/index.html
@@ -146,10 +146,18 @@
             <li class="perfomance-item">
               <img srcset="./images/desk-top-photo/apps.jpg 1x,
               ./images/desk-top-photo/apps.jpg 2x"
-              src="./images/apps.jpg" alt="applications" width="360">
+              src="./images/apps.jpg" alt="applications" width="360"/>
             </li>
             <li class="perfomance-item">
-              <img src="./images/compmob.jpg" alt="computer with mobile" width="360">
+              <img
+                srcset="
+                  ./images/desctop-photo.jpg    1x,
+                  ./images/desk-top-photo/telephone@2x.jpg 2x
+                "
+                src="./images/telephone.jpg"
+                alt="picture"
+                width="360"
+              />
             </li>
         </ul>
         </div >
