--- a/index.html
+++ b/index.html
@@ -139,23 +139,20 @@
           <h2 class="perfomance-title">What Are We Doing</h2>
           <ul class="perfomance-list list">
             <li class="perfomance-item">
-              <img srcset="./images/desk-top-photo/comp.jpg 1x,
+              <img srcset="./images/desk-top-photo/comp.jpg 1x, 
               ./images/desk-top-photo/comp@2x.jpg 2x"
               src="./images/computer.jpg" alt="computer" width="360">
             </li>
             <li class="perfomance-item">
-              <img srcset="./images/desk-top-photo/apps.jpg 1x,
-              ./images/desk-top-photo/apps.jpg 2x"
+              <img srcset="./images/desk-top-photo/apps.jpg 1x, 
+              ./images/desk-top-photo/apps@2x.jpg 2x"
               src="./images/apps.jpg" alt="applications" width="360"/>
             </li>
             <li class="perfomance-item">
-              <img
-                srcset="
-                  ./images/desctop-photo.jpg    1x,
-                  ./images/desk-top-photo/telephone@2x.jpg 2x
-                "
-                src="./images/telephone.jpg"
-                alt="picture"
+              <img srcset="./images/desk-top-photo/compmob.jpg 1x,
+              ./images/desk-top-photo/compmob@2x.jpg 2x"
+                src="./images/compmob.jpg"
+                alt="computer with mobile"
                 width="360"
               />
             </li>
@@ -163,12 +160,14 @@
         </div >
       </section>
       <!-- Наша команда  -->
-      <!-- <section class="team">
+      <section class="team">
         <div class="container container-team">
           <h2 class="team-title">Our Team</h2>
           <ul class="team-members list">
             <li class="team-members-item">
-              <img src="./images/marc.jpg" alt="pic of Marc Guerrero" width="264">
+              <img srcset="./images/desk-top-photo/mark1.jpg 1x,
+              ./images/desk-top-photo/mark@2x.jpg 2x"
+              src="./images/marc.jpg" alt="pic of Marc Guerrero" width="264"/>
               <div class="team-members-description">
                 <h3 class="team-members-item-title">Mark Guerrero</h3>
                 <p class="strategy-text team-members-item-text">Product Designer</p>
@@ -197,7 +196,9 @@
               </div >
             </li>
             <li class="team-members-item">
-              <img src="./images/tom.jpg" alt="pic of Tom Ford" width="264">
+              <img srcset="./images/desk-top-photo/tom1.jpg 1x,
+              ./images/desk-top-photo/tom@2x.jpg 2x"
+              src="./images/tom.jpg" alt="pic of Tom Ford" width="264"/>
              <div class="team-members-description">
                 <h3 class="team-members-item-title">Tom Ford</h3>
                 <p class="strategy-text team-members-item-text ">Frontend Developer</p>
@@ -226,7 +227,9 @@
              </div >
             </li>
             <li class="team-members-item" >
-              <img src="./images/camila.jpg" alt="pic of Camila Garcia" width="264">
+              <img srcset="./images/desk-top-photo/camila1.jpg 1x, 
+              ./images/desk-top-photo/camila@2x.jpg 2x"
+              src="./images/camila.jpg" alt="pic of Camila Garcia" width="264">
               <div class="team-members-description">
                 <h3 class="team-members-item-title">Camila Garcia</h3>
                 <p class="strategy-text team-members-item-text ">Marketing</p>
@@ -255,7 +258,9 @@
               </div >
             </li>
             <li class="team-members-item">
-              <img src="./images/daniel.jpg" alt="pic of Daiel Wilson" width="264">
+              <img srcset="./images/desk-top-photo/daniel1.jpg 1x, 
+              ./images/desk-top-photo/daniel@2x.jpg 2x"
+              src="./images/daniel.jpg" alt="pic of Daiel Wilson" width="264">
               <div class="team-members-description">
                 <h3 class="team-members-item-title">Daniel Wilson</h3>
                 <p class="strategy-text team-members-item-text">UI Designer</p>
@@ -285,9 +290,9 @@
             </li>
           </ul>
         </div >
-      </section> -->
+      </section>
       <!-- ---------------- SECTION CUSTOMERS----------------------->
-      <!-- <section class="customers">
+      <section class="customers">
         <div class="container customers-container">
           <h2 class="customers-title">Customers</h2>
           <ul class="customers-list list">
@@ -324,7 +329,7 @@
           </ul>
         </div>
       </section>
-  </main> -->
+  </main>
   <!------------------------------- Footer----------------->
   <!-- <footer class="footer"> 
     <div class="container container-footer">
