--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
       </section>
   </main>
   <!------------------------------- Footer----------------->
-  <!-- <footer class="footer"> 
+  <footer class="footer"> 
     <div class="container container-footer">
       <div class="footer-logo">
       <a href="./index.html" class="main-logo link" >Web<span class="main-logo-studio-footer link">Studio</span></a>
@@ -361,10 +361,10 @@
     </svg>
   </a></li>
 </ul>
-    </div> -->
+    </div>
 
     <!----------------------------FOOTER FORM --------------- -->
-      <!-- <div class="footer-form-wrap">
+      <div class="footer-form-wrap">
         <p class="form-text">Subscribe</p>
         <form class="footer-form">
           <label class="form-label" for="user_subscribe">
@@ -379,7 +379,7 @@
         </form>
       </div>
       </div >
-  </footer> -->
+  </footer>
   <!---------------------------Modal window--------------------->
 <div class="backdrop is-hidden" data-modal>
   <div class="modal">
