--- a/index.html
+++ b/index.html
@@ -50,27 +50,27 @@
           <li class="menu-item"><a class="menu-link link" href="">Contacts</a></li>
          </ul>
          <ul class="dialing list" >
-          <li class="dialing-item"><a href="tel:+110001111111" class="mail-link link dialing-tel">+11 (000) 111-11-11 </a></li>
-          <li class="mail .contacts "><a href="mailto:info@devstudio.com" class="mail-link link dialing-mail">info@devstudio.com</a></li>
+          <li class="dialing-item"><a href="tel:+110001111111" class="dialing-tel link">+11 (000) 111-11-11 </a></li>
+          <li class="mail .contacts "><a href="mailto:info@devstudio.com" class="dialing-mail link ">info@devstudio.com</a></li>
           
       </ul>
-      <ul class="team-soc-list menu-socials list">
-        <li class="team-soc-item"><a href="" class="menu-socials-link link">
+      <ul class="menu-socials list">
+        <li class="menu-soc-item"><a href="" class="menu-socials-link link">
           <svg width="24" height="24" class="team-soc-icon">
             <use href="./images/icons.svg#icon-ig-ik"></use>
           </svg>
         </a></li>
-        <li class="team-soc-item"><a href="" class="menu-socials-link link">
+        <li class="menu-soc-item"><a href="" class="menu-socials-link link">
           <svg width="24" height="24" class="team-soc-icon">
             <use href="./images/icons.svg#icon-twitter"></use>
           </svg>
         </a></li>
-        <li class="team-soc-item"><a href="" class="menu-socials-link link">
+        <li class="menu-soc-item"><a href="" class="menu-socials-link link">
           <svg width="24" height="24" class="team-soc-icon">
             <use href="./images/icons.svg#icon-facebook"></use>
           </svg>
         </a></li>
-        <li class="team-soc-item"><a href="" class="menu-socials-link link">
+        <li class="menu-soc-item"><a href="" class="menu-socials-link link">
           <svg width="24" height="24" class="team-soc-icon">
             <use href="./images/icons.svg#icon-linkedin"></use>
           </svg>
